# vtk-occt

./: CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp
.github/workflows/: build.yml
